# kexec

./: CMakeLists.txt  build.sh  dynamic_buffer.c  dynamic_buffer.h  miniawk.l  prog_exec.c  prog_exec.h  shell_exec.c  shell_exec.h  shlex.c  shlex.h  trace.c  trace.h
test/: CMakeLists.txt  interact.py  npexec.c  npexec2.c  npexec3.c  test.c  test.py  test2.c  test3.c  test_shexec.c
